fixed div overflow blocking buttons

--- a/public/rating.css
+++ b/public/rating.css
@@ -71,4 +71,8 @@ input[type="radio"]:hover {
 .radioLabel:hover {
     cursor: pointer;
 }
-
+#eidi{
+    z-index:-5!important;
+    visibility:hidden;
+    display:none;
+}
